--- a/create-etherum-wallet.csproj
+++ b/create-etherum-wallet.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Nethereum.KeyStore" Version="3.4.0" />
     <PackageReference Include="Nethereum.Web3" Version="3.4.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Rijndael256" Version="3.2.0" />
     <PackageReference Include="Rijndael256.Core" Version="3.2.5" />
     <PackageReference Include="System" Version="4.1.0311.2" />
     <PackageReference Include="System.Collections" Version="4.3.0" />
